tests/ui/error-codes/E0208.stderr
error: [+, o]
  --> $DIR/E0208.rs:4:1
   |
LL | struct Foo<'a, T> {
   | ^^^^^^^^^^^^^^^^^

error: aborting due to previous error

